--- a/src/webapp/WEB-INF/pages/new.html
+++ b/src/webapp/WEB-INF/pages/new.html
@@ -8,43 +8,16 @@
 
 <form method="post" action="/new">
     <table>
-        <label for="name">Name: </label>
-        <input name="name" type="text" placeholder="enter name" id="name"> <br>
-        <label for="surname">Surname: </label>
-        <input name="surName" type="text" placeholder="enter surname" id="surname"> <br>
+        <label for="name">Name:
+            <input id="name" name="name" type="text" placeholder="enter name">
+        </label> <br>
+        <label for="surname">Surname:
+            <input id="surname" name="surName" type="text" placeholder="enter surname">
+        </label> <br>
     </table>
     <br>
     <input type="submit" value="Save user">
 </form>
-
-<!--<form th:method="POST" th:action="@{/people}" th:object="${person}">-->
-<!--<form th:method="POST" th:action="@{/}" th:object="${user}">-->
-<!--    <label for="firstName">Enter name: </label>-->
-<!--    <input type="text" th:field="*{firstName}" id="firstName"/>-->
-<!--    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name Error</div>-->
-<!--    <br/>-->
-<!--    <label for="lastName">Enter last name: </label>-->
-<!--    <input type="text" th:field="*{lastName}" id="lastName"/>-->
-<!--    <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last Name Error</div>-->
-<!--    <br/>-->
-<!--    <input type="submit" value="Create!"/>-->
-<!--</form>-->
-
-<!--<form action="#" th:action="@{/new}" th:object="${user}" method="post">-->
-<!--    <table border="1">-->
-<!--        <tr>-->
-<!--            <td><label for="firstName">Enter name: </label></td>-->
-<!--            <td><input type="text" th:field="*{user.setFirstName()}" id="firstName" /></td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td><label for="lastName">Enter last name: </label></td>-->
-<!--            <td><input type="text" th:field="*{user.setLastName()}" id="lastName" /></td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td><input type="submit" value="Submit" /></td>-->
-<!--        </tr>-->
-<!--    </table>-->
-<!--</form>-->
 
 </body>
 </html>
