--- a/src/webapp/WEB-INF/pages/new.html
+++ b/src/webapp/WEB-INF/pages/new.html
@@ -10,7 +10,7 @@
     <label for="name">Name:
         <input id="name" type="text" th:field="*{name}" placeholder="enter the user name">
     </label> <br>
-    <label for="surname">Name:
+    <label for="surname">Surname:
         <input id="surname" type="text" th:field="*{surName}" placeholder="enter the user's last name">
     </label> <br>
     <hr>
