--- a/src/webapp/WEB-INF/pages/show.html
+++ b/src/webapp/WEB-INF/pages/show.html
@@ -13,7 +13,7 @@
     <label for="name">Name:
         <input id="name" type="text" th:field="*{name}" th:value="${user.getName()}">
     </label> <br>
-    <label for="surname">Name:
+    <label for="surname">Surname:
         <input id="surname" type="text" th:field="*{surName}" th:value="${user.getSurName()}">
     </label>
     <hr>
