Update UserController.java, index.html, show.html

--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div th:each="user : ${users}">
-    <a th:href="@{/show(userId=${user.getId()})}" th:text="|${user.getName()} ${user.getSurName()}|">user</a>
+    <a th:href="@{/show(id=${user.getId()})}" th:text="|${user.getName()} ${user.getSurName()}|">user</a>
 </div>
 
 <br>
